[package]
name = "whirl"
version = "0.0.1-dev"
authors = ["Alexander Kuleshov <kuleshovmail@gmail.com>"]
license = "Apache-2.0"
description = "Simple load testing tool"
exclude = [".github/"]
keywords = ["cli", "load-testing", "performance"]
repository = "https://github.com/0xAX/whirl"
readme = "README.md"
edition = "2021"

[[bin]]
name = "whirl"

[workspace]
members = [
    "crates/radius"
]

[dependencies]
radius = { path = "crates/radius" }
getopts = "0.2"