[package]
name = "whirl"
version = "0.0.1-dev"
authors = ["Alexander Kuleshov <kuleshovmail@gmail.com>"]
license = "Apache-2.0"
description = "Simple load testing tool"
exclude = [".github/", "examples/"]
keywords = ["cli", "load-testing", "performance"]
repository = "https://github.com/0xAX/whirl"
readme = "README.md"
edition = "2021"

[[bin]]
name = "whirl"

[workspace]
members = [
    "crates/radius",
    "crates/libwl"
]

[dependencies]
radius = { path = "crates/radius", version = "0.0.1" }
libwl = { path = "crates/libwl", version = "0.0.1" }
getopts = { version = "0.2" }

[profile.dev]
debug = true

[profile.test]
debug = true

[profile.release]
lto = true
opt-level = 2
